--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Maryam Tunwase</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,27 +52,27 @@
 </head>
 <body>
 
-    <h1>About Tunwase Maryam</h1>
+    <h1>About Maryam Tunwase</h1>
 
-    <p>Hello! My name is Tunwase Maryam, a passionate individual pursuing a BSc in Computer Science. I am currently in my final year and doing an internship at Access Bank in the Network Operations/Engineering department. I love bead making, reading books, listening to music, and watching movies. I believe that the knowledge and skills I acquire will help me shape the future I desire.</p>
+    <p>A glimpse into my journey</p>
 
     <figure>
         <picture>
-            <source media="(min-width: 1024px)" srcset="images/large-image.jpg">
-            <source media="(min-width: 768px)" srcset="images/medium-image.jpg">
-            <source media="(min-width: 480px)" srcset="images/small-image.jpg">
-            <img src="images/fallback-image.jpg" alt="A representation of Tunwase Maryam's journey" style="max-width: 100%; height: auto;">
+            <source media="(min-width: 1024px)" srcset="assets/assets/images/IMG_1673.jpg">
+            <source media="(min-width: 768px)" srcset="assets/assets/images/IMG_1673.jpg">
+            <source media="(min-width: 480px)" srcset="assets/assets/images/IMG_1673.jpg">
+            <img src="assets/assets/images/IMG_1673.jpg" alt="A representation of Maryam Tunwase's journey" style="max-width: 100%; height: auto;">
         </picture>
-        <figcaption>A glimpse into my journey.</figcaption>
+        <figcaption>Me in a server room at ADC.</figcaption>
     </figure>
 
     <audio controls>
-        <source src="audio/message.mp3" type="audio/mpeg">
+        <source src="assets/assets/audio/AUDIO-2024-08-24-16-01-45.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
     <video controls>
-        <source src="video/intro.mp4" type="video/mp4">
+        <source src="assets/assets/video/filtered-94CB16B5-FC9B-496F-B2BD-C0DD43D90733.MP4" type="video/mp4">
         Your browser does not support the video element.
     </video>
 
