--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <footer>
         <p><a href="#top">Back to Top</a></p>
-        <p><a href="form2.html">Apply Here</a></p>
+        <p><a href="form.html">Apply Here</a></p>
 
     </footer>
 
