--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
     <footer>
         <p><a href="#top">Back to Top</a></p>
         <p><a href="form.html">Apply Here</a></p>
-
+        <p><a href="table.html">View Courses</a></p>
+        <p><a href="media.html">My journey</a></p>
     </footer>
 
 </body>
