--- a/media.html
+++ b/media.html
@@ -3,76 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Maryam Tunwase</title>
+    <title>About Me</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            color: #333;
-            margin: 20px;
+            margin: 10px;
         }
 
         h1 {
+            color: darkblue;
             text-align: center;
-            color: #555;
         }
 
-        p {
+        nav ul {
+            list-style-type: none;
+            padding: 0;
             text-align: center;
-            font-size: 18px;
-            margin-bottom: 30px;
         }
 
-        figure {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 30px;
+        nav ul li {
+            display: inline;
+            margin-right: 10px;
         }
 
-        figcaption {
+        nav ul li a {
+            text-decoration: none;
+            color: blue;
+        }
+
+        section {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 10px;
+            border: 1px solid #ccc;
+        }
+
+        h2 {
+            color: darkblue;
+        }
+
+        hr {
+            margin: 20px 0;
+        }
+
+        footer {
             text-align: center;
-            font-size: 14px;
-            margin-top: 10px;
-            color: #777;
+            margin-top: 20px;
         }
 
-        audio {
-            display: block;
-            margin: 20px auto;
-        }
-
-        video {
-            display: block;
-            margin: 20px auto;
-            max-width: 100%;
-            height: auto;
+        footer a {
+            color: blue;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
 
-    <h1>About Maryam Tunwase</h1>
+    <header>
+        <h1>About Me</h1>
+        <nav>
+            <ul>
+                <li><a href="#biography">Biography</a></li>
+                <li><a href="#altSchool">Why I Joined AltSchool</a></li>
+                <li><a href="#goals">My Goals</a></li>
+                
+            </ul>
+        </nav>
+        <hr>
+    </header>
 
-    <p>A glimpse into my journey</p>
+    <main>
+        <section>
+            <h2>Biography</h2>
+            <p>My name is Tunwase Maryam, born on the 29th of November, 2004. I hail from Epe, Lagos, but I was born and raised in Lagos, Nigeria. Currently, I am pursuing a BSc in Computer Science, and I'm in my final year at university. I am also gaining valuable experience through an internship at Access Bank in the Network Operations/Engineering department. In my free time, I enjoy making beads, reading books, listening to music, and watching movies. What drives me is my desire to achieve the life I envision for myself.
+            </p>
+        </section>
 
-    <figure>
-        <picture>
-            <source media="(min-width: 1024px)" srcset="assets/assets/images/IMG_1673.jpg">
-            <source media="(min-width: 768px)" srcset="assets/assets/images/IMG_1673.jpg">
-            <source media="(min-width: 480px)" srcset="assets/assets/images/IMG_1673.jpg">
-            <img src="assets/assets/images/IMG_1673.jpg" alt="A representation of Maryam Tunwase's journey" style="max-width: 100%; height: auto;">
-        </picture>
-        <figcaption>Me in a server room at ADC.</figcaption>
-    </figure>
+        <section id="reason">
+            <h2>Why I Joined AltSchool Africa</h2>
+            <p>I joined the Alt School Front-End Engineering program in the School of Engineering because I was informed about it by someone I trust, and I felt it would be beneficial to me as I’m pursuing a career in tech. I am not yet certain about what I want to specialize in, but I know that having the ability to build websites is a valuable skill that will open up more opportunities. I believe that no knowledge gained is ever wasted, and this program will help me broaden my expertise and make me more versatile in the tech industry as I continue to explore my path.</p>
+        </section>
 
-    <audio controls>
-        <source src="assets/assets/audio/AUDIO-2024-08-24-16-01-45.m4a" type="audio/mpeg">
-    </audio>
+        <section id="goals">
+            <h2>My Goals for the AltSchool Africa Front-End Engineering Program</h2>
+            <p>As a beginner in an online front-end engineering program, my primary goals include learning the basics of HTML, CSS, and JavaScript to create simple web pages. I aim to understand how to structure and style content effectively while building my problem-solving skills through beginner-friendly projects. I’m also focusing on becoming familiar with essential tools like code editors and browsers for debugging. Gaining confidence in using online resources and communities for continuous learning is important to me, along with understanding the fundamentals of responsive design and accessibility to create user-friendly web interfaces.</p>
+        </section>
 
-    <video controls>
-        <source src="assets/assets/video/filtered-94CB16B5-FC9B-496F-B2BD-C0DD43D90733.MP4" type="video/mp4">
-    </video>
+        <section id="altschool-id">
+            <h2>AltSchool ID</h2>
+            <p><strong>ID:</strong> ALT/SOE/024/1279</p>
+        </section>
+        <hr>
+    </main>
+
+    <footer>
+        <p><a href="#top">Back to Top</a></p>
+        <p><a href="form.html">Apply Here</a></p>
+        <p><a href="table.html">View Courses</a></p>
+        <p><a href="media.html">My journey</a></p>
+    </footer>
 
 </body>
 </html>
